# sony_sdk

./: .clang-format  CMakeLists.txt  Readme.md  app.c  reset.sh  run.sh
aperture_service/: aperture_manager.c
app/: app.c  camtest.c  camtest.tmp_c
c++_wrapper/: CameraRemote_SDK.h  CrCommandData.h  CrDefines.h  CrDeviceProperty.h  CrError.h  CrImageDataBlock.h  CrTypes.h  ICrCameraObjectInfo.h  IDeviceCallback.h  callback.hpp  wrapper.cpp  wrapper.h
camera_service/: api.h  main.c  sony_properties.h  sonyconst.h
classes_methods/: classes_methods.cpp  classes_methods.h
exsposure_correction_service/: exsposure_correction_mamager.c
file_type_service/: file_type_manager.c
focus_mode_service/: focus_mode_manager.c
iso_service/: iso_manager  iso_manager.c
jpeg_quality_service/: jpeg_quality_manager.c
lib_c/: lib_c.c  lib_c.h
live_image_service/: live_image.c
shutter_speed_service/: shutter_speed_manager.c
usb_reset/: Makefile  reset_usb  usb_reset.c
utils/: utils.cpp  utils.h
web_interface/: app.py
web_interface/templates/: index.html
white_balance_service/: white_balance_manager.c
xml_web/: app.py
xml_web/templates/: index.html
